--- a/src/src/main/resources/application.yml
+++ b/src/src/main/resources/application.yml
@@ -1,1 +1,32 @@
+spring:
+  profiles:
+    active: mysql
+
+
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT_FALSE
+      username: sa
+      password:
+      driver-class-name: org.h2.Driver
+
+---
+spring:
+  config:
+    activate:
+      on-profile: mysql
+  datasource:
+    hikari:
+      jdbc-url: jdbc:mysql://localhost:3306/batch_study
+      username: root
+      password: root
+      driver-class-name: com.mysql.jdbc.Driver
+  batch:
+    jdbc:
+      initialize-schema: never
 
